[gd_scene load_steps=13 format=3 uid="uid://1ohs6nj2dm33"]

[ext_resource type="Script" path="res://scenes/bombs/RotationSpeedUpBomb/RotationSpeedUpBomb.gd" id="1_07mff"]
[ext_resource type="Texture2D" uid="uid://d2gno2lcf63pb" path="res://images/bomb/sprite_rotation_speed_up.svg" id="3_1xipd"]
[ext_resource type="PackedScene" uid="uid://dq81owitrvpew" path="res://scenes/bombs/BombTimer.tscn" id="3_g3ujk"]
[ext_resource type="PackedScene" uid="uid://ltvbulh18nft" path="res://scenes/bombs/WarningTimer.tscn" id="3_rbldq"]
[ext_resource type="Script" path="res://addons/resonate/sound_manager/sound_bank.gd" id="4_vtf52"]
[ext_resource type="Script" path="res://addons/resonate/sound_manager/sound_event_resource.gd" id="5_jwm7d"]
[ext_resource type="AudioStream" uid="uid://c352772ve0yuk" path="res://audio/sfx/slice_3.wav" id="6_op5bq"]
[ext_resource type="PackedScene" uid="uid://b6vb4gmrkuugo" path="res://scenes/bombs/bombeffects/BrightModulator.tscn" id="8_djtpj"]
[ext_resource type="AudioStream" uid="uid://cdk204qcjn0hb" path="res://audio/sfx/explosion_5.wav" id="8_txrxd"]

[sub_resource type="CircleShape2D" id="CircleShape2D_unecs"]
radius = 32.0

[sub_resource type="Resource" id="Resource_purij"]
script = ExtResource("5_jwm7d")
name = "slay"
bus = ""
volume = 0.0
pitch = 1.0
streams = Array[AudioStream]([ExtResource("6_op5bq")])

[sub_resource type="Resource" id="Resource_g3ecd"]
script = ExtResource("5_jwm7d")
name = "explosion"
bus = ""
volume = 0.0
pitch = 1.0
streams = Array[AudioStream]([ExtResource("8_txrxd")])

[node name="RotationSpeedUpBomb" type="Area2D" node_paths=PackedStringArray("CollisionShape2D_node", "BombTimer_node", "WarningTimer_node")]
modulate = Color(1, 1, 1, 0.12549)
script = ExtResource("1_07mff")
CollisionShape2D_node = NodePath("CollisionShape2D")
BombTimer_node = NodePath("BombTimer")
WarningTimer_node = NodePath("WarningTimer")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_unecs")
disabled = true

[node name="BombTimer" parent="." instance=ExtResource("3_g3ujk")]

[node name="WarningTimer" parent="." instance=ExtResource("3_rbldq")]

[node name="RotationSpeedUpSprite" type="Sprite2D" parent="."]
texture = ExtResource("3_1xipd")

[node name="SoundBank" type="Node" parent="."]
script = ExtResource("4_vtf52")
label = "sfx_RSU_bomb"
bus = "SFX"
events = Array[ExtResource("5_jwm7d")]([SubResource("Resource_purij"), SubResource("Resource_g3ecd")])

[node name="BrightModulator" parent="." instance=ExtResource("8_djtpj")]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="player_body_entered" from="." to="." method="queue_free"]
[connection signal="player_body_entered" from="." to="." method="slayed"]
[connection signal="bomb_timeout" from="BombTimer" to="." method="queue_free"]
[connection signal="bomb_timeout" from="BombTimer" to="." method="game_over"]
[connection signal="bomb_timeout" from="BombTimer" to="." method="exploded"]
[connection signal="warning_timeout" from="WarningTimer" to="." method="_on_warning_timer_warning_timeout"]
[connection signal="warning_timeout" from="WarningTimer" to="BombTimer" method="bomb_timer_start"]
